# mgr-exchange

./: .gitmodules  CMakeLists.txt  README.md  prebuild.cmake
include/: shmem-api.hpp
include/signals/: shsignals.h
signals/: shsignals.h
src/: argparser.cpp  argparser.h  asiointerface.cpp  asiointerface.h  interface.cpp  interface.h  main.cpp  main.cpp.autosave  protocol.h  serialize.cpp  serialize.h  sharedmemory.cpp  sharedmemory.h
utility/: main.cpp  main.h
